# deckbuilder

./: .codeclimate.yml  .coveragerc  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CONTRIBUTORS.txt  LICENSE  README.rst  local.yml  manage.py  production.yml  pyproject.toml  setup.cfg
.envs/.local/: .postgres
compose/local/django/: Dockerfile
compose/production/caddy/: Caddyfile
compose/production/django/: Dockerfile
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: Makefile  conf.py  index.rst  make.bat
docs/pycharm/: configuration.rst
mtg_deckbuilder/cards/: admin.py  apps.py  models.py  tests.py
mtg_deckbuilder/cards/migrations/: 0001_initial.py  0002_auto_20180613_1846.py  0003_auto_20180613_1847.py
mtg_deckbuilder/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
mtg_deckbuilder/templates/: base.html
mtg_deckbuilder/users/: apps.py  views.py
mtg_deckbuilder/users/tests/: test_admin.py  test_models.py  test_urls.py  test_views.py
