[tool.poetry]
name = "mtg_deckbuilder"
version = "0.1.0"
description = ""
authors = ["MrGreenTea <mrlordalfred@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.5"
pytz="^2018.4"  # https://github.com/stub42/pytz
python-slugify="^1.2.5"  # https://github.com/un33k/python-slugify
Pillow="^5.1.0"  # https://github.com/python-pillow/Pillow
argon2-cffi="^18.1.0"  # https://github.com/hynek/argon2_cffi
whitenoise="^3.3.1"  # https://github.com/evansd/whitenoise
redis="^2.10.5"  # https://github.com/antirez/redis

# Django
# ------------------------------------------------------------------------------
django="^2.0.6"  # pyup: < 2.1  # https://www.djangoproject.com/
django-environ="^0.4.4"  # https://github.com/joke2k/django-environ
django-model-utils="^3.1.2"  # https://github.com/jazzband/django-model-utils
django-allauth="^0.36.0"  # https://github.com/pennersr/django-allauth
django-crispy-forms="^1.7.2"  # https://github.com/django-crispy-forms/django-crispy-forms
django-redis="^4.9.0"  # https://github.com/niwinz/django-redis

# Django REST Framework
djangorestframework="^3.8.2"  # https://github.com/encode/django-rest-framework
coreapi="^2.3.3"  # https://github.com/core-api/python-client


[tool.poetry.dev-dependencies]
Werkzeug="^0.14.1"  # https://github.com/pallets/werkzeug
ipdb="^0.11"  # https://github.com/gotcha/ipdb
Sphinx="^1.7.5"  # https://github.com/sphinx-doc/sphinx
psycopg2="^2.7.4 --no-binary psycopg2"  # https://github.com/psycopg/psycopg2

# Testing
# ------------------------------------------------------------------------------
pytest="^3.6.1"  # https://github.com/pytest-dev/pytest
pytest-sugar="^0.9.1"  # https://github.com/Frozenball/pytest-sugar

# Code quality
# ------------------------------------------------------------------------------
flake8="^3.5.0"  # https://github.com/PyCQA/flake8
coverage="^4.5.1"  # https://github.com/nedbat/coveragepy

# Django
# ------------------------------------------------------------------------------
factory-boy="^2.11.1"  # https://github.com/FactoryBoy/factory_boy
django-test-plus="^1.0.22"  # https://github.com/revsys/django-test-plus

django-debug-toolbar="^1.9.1"  # https://github.com/jazzband/django-debug-toolbar
django-extensions="^2.0.7"  # https://github.com/django-extensions/django-extensions
django-coverage-plugin="^1.5.0"  # https://github.com/nedbat/django_coverage_plugin
pytest-django="^3.2.1"  # https://github.com/pytest-dev/pytest-django

