[tool.poetry]
name = "mtg_deckbuilder"
version = "0.1.0"
description = ""
authors = ["MrGreenTea <mrlordalfred@gmail.com>"]

[tool.black]
py36=true
line-length=120


[tool.poetry.dependencies]
python = "^3.6.5"
pytz="^2018.4"  # https://github.com/stub42/pytz
python-slugify="^1.2.5"  # https://github.com/un33k/python-slugify
Pillow="^5.1.0"  # https://github.com/python-pillow/Pillow
argon2-cffi="^18.1.0"  # https://github.com/hynek/argon2_cffi
whitenoise="^3.3.1"  # https://github.com/evansd/whitenoise
redis="^2.10.5"  # https://github.com/antirez/redis
psycopg2="^2.7.4 --no-binary psycopg2"  # https://github.com/psycopg/psycopg2

# Django
# ------------------------------------------------------------------------------
django="^2.0.6"  # pyup: < 2.1  # https://www.djangoproject.com/
django-environ="^0.4.4"  # https://github.com/joke2k/django-environ
django-model-utils="^3.1.2"  # https://github.com/jazzband/django-model-utils
django-allauth="^0.36.0"  # https://github.com/pennersr/django-allauth
django-crispy-forms="^1.7.2"  # https://github.com/django-crispy-forms/django-crispy-forms
django-redis="^4.9.0"  # https://github.com/niwinz/django-redis

# Django REST Framework
djangorestframework="^3.8.2"  # https://github.com/encode/django-rest-framework
coreapi="^2.3.3"  # https://github.com/core-api/python-client

# Deploy
raven={version="^6.9.0", optional = true}  # https://github.com/getsentry/raven-python
gunicorn={version="^19.8.1", optional = true}  # https://github.com/benoitc/gunicorn
django-storages={version="^1.6.6", extras=["boto3"], optional = true}  # https://github.com/jschneier/django-storages
django-anymail={version="^3.0", extras=["mailgun"], optional = true}  # https://github.com/anymail/django-anymail

# Testing
# ------------------------------------------------------------------------------
pytest={version="^3.6.1", optional = true}  # https://github.com/pytest-dev/pytest
pytest-sugar={version="^0.9.1", optional = true}  # https://github.com/Frozenball/pytest-sugar
pytest-django={version="^3.2.1", optional = true}  # https://github.com/pytest-dev/pytest-django
hypothesis={version="^3.57", optional = true}  # https://github.com/HypothesisWorks/hypothesis
pytest-xdist = {version="^1.22", optional = true}
pytest-cov = {version="^2.5", optional = true}
django-coverage-plugin={version="^1.5.0", optional = true}  # https://github.com/nedbat/django_coverage_plugin
codecov = {version = "^2.0", optional = true}

[tool.poetry.dev-dependencies]
Werkzeug="^0.14.1"  # https://github.com/pallets/werkzeug

django-debug-toolbar="^1.9.1"  # https://github.com/jazzband/django-debug-toolbar
django-extensions="^2.0.7"  # https://github.com/django-extensions/django-extensions
pylint = "^1.9"
pylint-common = "^0.2.5"
pylint-django = "^0.11.1"

[tool.poetry.extras]
deploy = ["raven","gunicorn","django-storages","django-anymail"]
test = ["pytest", "pytest-sugar", "pytest-django", "hypothesis", "pytest-xdist", "pytest-cov", "django-coverage-plugin", "codecov"]
none = []
